# virtus

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: template.yml
src/: config.rs  disk.rs  domain.rs  error.rs  image.rs  interface.rs  lib.rs  main.rs  network.rs  vm.rs
src/ovs/: bridge.rs  interface.rs  mod.rs  port.rs  request.rs  response.rs
virtus/: Cargo.toml  build.rs
virtus/old/: config.rs  error.rs  main.rs
virtus/old/ovs/: interface.rs  port.rs  response.rs
virtus/proto/: virtus.proto
virtus/src/: builder.rs  disk.rs  error.rs  lib.rs  main.rs  node.rs  pool.rs  virtus.rs
