[package]
name = "virtus"
version = "0.1.0"
edition = "2021"
authors = ["James Seeman"]
keywords = ["libvirt", "virtualization", "KVM"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = { version = "0.3.1", features = ["qemu", "bindgen_regenerate"] }
sled = "0.34.7"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.117"
derivative = "2.2.0"
#clap = { version = "4.5.7", features = ["derive"] }
thiserror = "1.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "serde",             # Allows serde serialize 
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
