[package]
name = "virtus"
version = "0.1.0"
edition = "2021"
authors = ["James Seeman"]
keywords = ["libvirt", "virtualization", "KVM"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = { version = "=0.3.1", features = ["qemu"] }
#virt = { version = "0.4.0", features = ["qemu", "bindgen_regenerate"] }
#virt = { version = "0.4.0", features = ["qemu"] } 
sled = "0.34.7"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.117"
derivative = "2.2.0"
thiserror = "1.0"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
pnet = "0.30.0"
dhcproto = "0.12.0"
bincode = "1.3.3"

#[dev-dependencies]
#virt-sys = "0.2.0"


[dependencies.uuid]
version = "1.8.0"
features = [
    "serde",             # Allows serde serialize 
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
