[package]
name = "virtus"
version = "0.1.0"
edition = "2021"

[dependencies]
skiff = { path = "../../skiff" }
anyhow = "1.0.91"
thiserror = "1.0"
prost = "0.13.1"
tonic = "0.12.1"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
hostname = "0.4.0"

[build-dependencies]
anyhow = "1.0.91"
tonic-build = "0.12"

[dev-dependencies]
serial_test = "3.1.1"
